--- a/Class 07/Class 7-Machine Learning I.qmd
+++ b/Class 07/Class 7-Machine Learning I.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Class 7: Machine Learning I"
 author: "Isabel Hui - A16887852"
-format: html
+format: gfm
 ---
 
 Today we are going to learn how to apply different machine learning methods, beginning with clustering.
