--- a/Class 08 Mini Project/Class 8 Mini Project.qmd
+++ b/Class 08 Mini Project/Class 8 Mini Project.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Class 8 Mini Project: Unsupervised Learning Analysis of Human Breast Cancer Cells"
 author: "Isabel Hui - A16887852"
-format: pdf
+format: gfm
 ---
 
 ## Introduction
