--- a/Class 09/Class 9.qmd
+++ b/Class 09/Class 9.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Class 9: Structural Bioinformatives 1"
 author: "Isabel Hui - A16887852"
-format: pdf
+format: gfm
 ---
 
 The main database for structural data is called the PDB (Protein Data Bank). Let's see what it contains:
