--- a/Class 13/Class 13.qmd
+++ b/Class 13/Class 13.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Class 13: RNASeq with DESeq2"
 author: "Isabel Hui - A16887852"
-format: pdf
+format: gfm
 ---
 
 Today we will analyze some RNASeq data from Himes et al. on the effects of dexamethasone (dex), a synthetic glucorticoid steroid on airway smooth muscle cells (ASM).
